Enhance text-truncate mixin. Fix native select.

--- a/src/scss/abstracts/mixins/_utilities.scss
+++ b/src/scss/abstracts/mixins/_utilities.scss
@@ -2,8 +2,8 @@
 // Utilities
 // --------------------------------------------------
 
-@mixin text-truncate {
+@mixin text-truncate($text-overflow: ellipsis) {
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: $text-overflow;
 }
